# vscode-c-

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
tests/: test_main.cpp
